# scatter-gather

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: connection.rs  executors.rs  lib.rs  pool.rs
core/src/middleware_interface/: mod.rs
core/src/middleware_specs/: mod.rs
core/src/source_specs/: binance.rs  mod.rs
examples/: benches.rs  peer_id.rs  pool-connection-customexecutor.rs  pool-connection.rs  pool-to-grpc.rs  ws-cache.rs  ws-simple-connection.rs  ws-to-grpc_example.rs  ws-to-grpc_server.rs
examples/source_specs/: binance.rs  bitstamp.rs  mod.rs  tests.rs
examples/source_specs/protobuffer/: orderbook.proto
middleware/scatter-gather-grpc/: Cargo.toml  build.rs
middleware/scatter-gather-grpc/examples/: basic_client.rs  basic_server.rs
middleware/scatter-gather-grpc/src/: lib.rs  main.rs  schema_specific.rs
middleware/scatter-gather-redis/: Cargo.toml  mod.rs
middleware/scatter-gather-redis/src/: lib.rs  main.rs  redis.rs
middleware/scatter-gather-websockets/: Cargo.toml
middleware/scatter-gather-websockets/src/: lib.rs
middleware/scatter-gather-websockets/tests/: helloworld.rs
models/: Cargo.toml
models/buckets/: Cargo.toml
models/identity-buckets/: Cargo.toml  README.md  build.rs
models/identity-buckets/examples/: basic-dht-simulation.rs
models/identity-buckets/src/: identity.rs  lib.rs  peer_id.rs
models/identity-buckets/src/dht/: mod.rs
models/src/: keys.proto  lib.rs  peer_id.rs  xor.rs
src/: benches.rs  lib.rs  main.rs
src/cache/: redis.rs
src/core/: mod.rs
src/source/: mod.rs  websockets.rs
src/source_spec/: mod.rs
src/source_specs/: binance.rs  bitstamp.rs  mod.rs
