[package]
name = "scatter-gather"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "*", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tungstenite = { version= "*", features= ["rustls-tls"]}
url = "*"
redis = { version = "0.19.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scatter-gather-core = { path = "core" }
scatter-gather-websockets = { path = "middleware/scatter-gather-websockets" }
scatter-gather-grpc = { path = "middleware/scatter-gather-grpc" }
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"

[workspace]
members = [
    "core",
    "middleware/scatter-gather-grpc",
    "middleware/scatter-gather-websockets",
    "middleware/scatter-gather-redis",
]