[package]
name = "scatter-gather"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] ,optional = false }
futures = "0.3"
tungstenite = { version= "*", features= ["rustls-tls"]}
url = "*"
redis = { version = "0.19.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = "1.0"
scatter-gather-core = { path = "core" }
buckets = { path = "models/buckets" }
scatter-gather-websockets = { path = "middleware/scatter-gather-websockets" }
scatter-gather-grpc = { path = "middleware/scatter-gather-grpc" }
tonic = "0.8"
prost = "0.11"
rand = "0.8.5"
uint = "0.9"
rayon = "1.7"

[build-dependencies]
tonic-build = "0.8"

[workspace]
members = [
    "core",
    "middleware/scatter-gather-grpc",
    "middleware/scatter-gather-websockets",
    "middleware/scatter-gather-redis",
#    "models",
]
exclude = [ 
    "models" 
]

[features]
default = ["serde"]