[package]
name = "scatter-gather"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scatter-gather-core = { path = "core" }
identity-buckets = { path = "models/identity-buckets" }
scatter-gather-websockets = { path = "middleware/scatter-gather-websockets" }
scatter-gather-grpc = { path = "middleware/scatter-gather-grpc" }

[dev-dependencies]
futures = "0.3"
tonic = "0.8"
prost = { version = "0.11"}
rand = { version = "0.8"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
tokio = { version= "1.0", features = ["full"] }
tungstenite = { version= "*", features= ["rustls-tls"]}

[build-dependencies]
tonic-build = "0.8"

[workspace]
members = [
    "core",
    "middleware/scatter-gather-grpc",
    "middleware/scatter-gather-websockets",
    "middleware/scatter-gather-redis",
    "models/identity-buckets",
]
exclude = [ 
    "models" 
]

[features]
default = []


