[package]
name = "scatter-gather-core"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.0", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
futures-channel = "0.3"