[package]
name = "scatter-gather-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scatter-gather-core = { path = "../../core" }
redis = { version = "0.22.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
tokio = { version = "1.0", features = ["full"] }