[package]
name = "scatter-gather-websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scatter-gather-core = { path = "../../core" }
futures = "0.3"
tokio = { version= "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] ,optional = false }
tokio-tungstenite = { version= "*", features= ["rustls-tls"] }
url = "2.3.1"
http = "*"