[package]
name = "identity-buckets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multihash = { version = "0.16", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
sha2 = "0.10.0"
bs58 = "0.4.0"
uint = "0.9"
rand = "0.8"
thiserror = "1.0"
quickcheck = "1"
zeroize = "1"
ed25519-dalek = "1.0.1"
prost = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.7", optional = true }
tokio = { version= "1.0", features = ["full"], optional = true }

[dev-dependencies]
base64 = "0.13.0"

[build-dependencies]
prost-build = "0.11"

[features]
serde = []
tokio = ["dep:tokio"]
rayon = ["dep:rayon"]
dht = []

[[example]]
name = "basic-dht-simulation"
required-features = ["dht", "tokio"]